samples/_failures_safe/1761248804_50db49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aca3ac0c.c: In function ‘transform_bounding_box’:
./samples/SAFE/__tmp_aca3ac0c.c:123:9: error: expected expression at end of input
  123 |         if (transformed.y > result.max.y)
      |         ^~
./samples/SAFE/__tmp_aca3ac0c.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aca3ac0c.c:123:9: error: expected declaration or statement at end of input
